# mlops_pirate

./: README.md  main.py  pyproject.toml
notebooks/: ML_D4_E1_sol_Pirate_Attacks.ipynb  ML_D4_E1_sol_Pirate_Attacks.py
